--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 679321234441502762
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 679321234441502762
 itemchannel = 
 
 before_alert = 1
